# Yes

./: .gitignore  Cargo.toml  Makefile  README.md  package.json  tsconfig.json
.devcontainer/: devcontainer.json
.devcontainers/: devcontainers.json  docker-compose.yml  otel-collector-config.yaml
.devcontainers/fixtures/: users.sql
.github/: dependabot.yml
.github/workflows/: bun.yml  deploy.yml  frontend.yml  rust.yml  terraform.yml
backend/: .env  .env.dev  Cargo.toml  Makefile  openapi.json
backend/.github/workflows/: rust.yml
backend/migrations/: 002_add_points_column.sql
backend/src/: auth.rs  config.rs  db.rs  errors.rs  jwt.rs  main.rs  models.rs  openapi.rs  tests.rs  tracing.rs
backend/src/sql/: add_user.sql  get_user_by_email.sql  get_users.sql  schema.sql
backend/tests/: main_test.rs
frontend/: .eslintrc.json  .gitignore  Makefile  README.md  eslint.config.mjs  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  webpack.config.js
frontend/.github/workflows/: bun.yml
frontend/public/: index.html
frontend/src/: App.js  App.test.tsx  App.tsx  index.js  index.tsx  setupTests.ts
frontend/src/__tests__/: App.test.tsx
frontend/src/api/: auth.js  config.js  index.js  purchase.js  runtime.ts  user.js
frontend/src/api/.openapi-generator/: FILES
frontend/src/api/apis/: DefaultApi.ts  UserApi.ts  index.ts
frontend/src/api/models/: PurchaseRequest.ts  User.ts  index.ts
frontend/src/components/: AboutSection.tsx  AuthorSection.tsx  FAQSection.tsx  FeaturesSection.tsx  HomeSection.tsx  LandingPage.tsx  LazyComponent.tsx  LoginRegisterPage.tsx  PurchasePointsPage.tsx  TestimonialsSection.tsx  menu.tsx
frontend/src/components/__tests__/: AboutSection.test.tsx  AuthorSection.test.tsx  FAQSection.test.tsx  FeaturesSection.test.tsx  HomeSection.test.tsx  TestimonialsSection.test.tsx
frontend/src/mocks/: handlers.ts
frontend/src/utils/: auth.ts  jwtDecode.ts
frontend/tests/: App.test.js  App.test.tsx
terraform/: main.tf  outputs.tf  variables.tf
