[package]
name = "bidding_app"
version = "0.1.0"
authors = ["Tom Moulard <tom@moulard.org>"]
edition = "2021"

[dependencies]
actix-web = "4.9.0"
actix-rt = "2.10.0"
jsonwebtoken = "9.3.0"
bcrypt = "0.16.0"
tokio-postgres = "0.7.12"
serde = { version = "1.0.216" }
tokio = "1.42.0"
env_logger = "0.11.5"
confik = "0.12.0"
deadpool-postgres = { version = "0.14", features = ["serde"] }
dotenvy = "0.15.7"
tokio-pg-mapper = "0.2.0"
derive_more = { version = "1.0.0", features = ["display", "error", "from"] }
tokio-pg-mapper-derive = "0.2.0"

[[bin]]
name = "bidding_app"
path = "src/main.rs"

[package.metadata]
rustfmt = { version = "1.8.0", default = true }
