[package]
name = "bidding_app"
description = "A simple bidding app"
version = "0.1.0"
authors = ["Tom Moulard <tom@moulard.org>"]
readme = "../README.md"
license-file = "../LICENSE"
edition = "2021"

[dependencies]
actix-rt = "2.10.0"
actix-web = "4.9.0"
bcrypt = "0.16.0"
confik = "0.12.0"
deadpool-postgres = { version = "0.14", features = ["serde"] }
derive_more = { version = "1.0.0", features = ["display", "error", "from"] }
dotenvy = "0.15.7"
env_logger = "0.11.5"
jsonwebtoken = "9.3.0"
serde = { version = "1.0.216" }
tokio = "1.42.0"
tokio-pg-mapper = "0.2.0"
tokio-pg-mapper-derive = "0.2.0"
tokio-postgres = "0.7.12"
utoipa = "5.2.0"
utoipa-actix-web = "0.1.2"
utoipa-swagger-ui = { version = "9.0.0", features = ["actix-web"] }
serde_json = "1.0"

[[bin]]
name = "bidding_app"
path = "src/main.rs"

[package.metadata]
rustfmt = { version = "1.8.0", default = true }
